--- a/action.yml
+++ b/action.yml
@@ -39,4 +39,9 @@ runs:
         chmod +x yutu-linux-amd64
         echo -n ${{ inputs.credential }} | base64 --decode > ./client_secret.json
         echo -n ${{ inputs.token }} | base64 --decode > ./youtube.token.json
-        ./yutu-linux-amd64 ${{ inputs.command }} ${{ inputs.subcommand }} ${{ inputs.flags }}
+        ./yutu-linux-amd64 ${{ inputs.command }} ${{ inputs.subcommand }} ${{ inputs.flags }} > output
+        {
+          echo "response<<EOF"
+          echo "$(cat output)"
+          echo "EOF"
+        } >> $GITHUB_OUTPUT
