--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,11 @@ inputs:
     required: false
     default: ''
 
+outputs:
+  response:
+    description: 'Response from the yutu command'
+    value: ${{ steps.run.outputs.response }}
+
 runs:
   using: composite
   steps:
@@ -37,12 +42,22 @@ runs:
         latest: ${{ inputs.version == '' }}
         tag: ${{ inputs.version }}
         fileName: yutu-linux-amd64
-    - shell: bash
+    - id: run
+      shell: bash
       run: |
         chmod +x yutu-linux-amd64
         echo -n ${{ inputs.credential }} | base64 --decode > ./client_secret.json
         echo -n ${{ inputs.token }} | base64 --decode > ./youtube.token.json
-        ./yutu-linux-amd64 ${{ inputs.command }} ${{ inputs.subcommand }} ${{ inputs.flags }} > output
+
+        flags=$(echo ${{ inputs.flags }} | tr -d '\n')
+        if [[ $flags =~ "-o json" || $flags =~ "--output json" ]]; then
+          command="$command | jq -R"
+          ./yutu-linux-amd64 ${{ inputs.command }} ${{ inputs.subcommand }} ${{ inputs.flags }} | jq 'tojson' > output
+        else
+          ./yutu-linux-amd64 ${{ inputs.command }} ${{ inputs.subcommand }} ${{ inputs.flags }} > output
+        fi
+        cat output
+
         {
           echo "response<<EOF"
           echo "$(cat output)"
